--- a/cellularTesting/package.json
+++ b/cellularTesting/package.json
@@ -18,6 +18,7 @@
   "license": "",
   "homepage": "",
   "dependencies": {
+    "colormap": "^2.3.0",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
     "react": "^16.2.0",
