--- a/cellularTesting/package.json
+++ b/cellularTesting/package.json
@@ -19,7 +19,7 @@
   "homepage": "",
   "dependencies": {
     "colormap": "^2.3.0",
-    "node-sass": "^4.7.2",
+    "node-sass": "4.10.0",
     "normalize.css": "^7.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
