--- a/cellularTesting/package.json
+++ b/cellularTesting/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --config webpack.production.config.js --progress --profile --colors",
     "start": "webpack-dev-server --progress --profile --colors",
     "lint": "eslint --ext js --ext jsx src || exit 0",
-    "dev": " webpack-dashboard -- webpack-dev-server",
+    "dev": "webpack-dev-server",
     "test": "export NODE_ENV=test && jest"
   },
   "repository": {
@@ -19,46 +19,45 @@
   "homepage": "",
   "dependencies": {
     "colormap": "^2.3.0",
-    "node-sass": "4.10.0",
-    "normalize.css": "^7.0.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "sass-loader": "^6.0.6"
+    "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "sass-loader": "^7.1.0Z"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "css-loader": "^0.28.7",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "^4.11.0",
-    "eslint-plugin-jest": "^21.3.2",
-    "eslint-plugin-react": "^7.5.1",
+    "css-loader": "^0.28.11",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-jest": "^21.27.2",
+    "eslint-plugin-react": "^7.11.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
-    "loglevel": "^1.6.0",
-    "postcss-loader": "^2.0.8",
+    "loglevel": "^1.6.1",
+    "postcss-loader": "^2.1.6",
     "react-hot-loader": "^3.1.3",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "react-test-renderer": "*",
-    "style-loader": "^0.19.0",
+    "react-test-renderer": "^16.6.3",
+    "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
+    "webpack": "^3.12.0",
     "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-dashboard": "^1.0.2",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.11.3"
   },
   "jest": {
     "verbose": true,
